--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
+    "react-scripts": "^0.0.0",
     "tailwindcss": "^3.2.4"
   },
   "scripts": {
@@ -37,9 +38,9 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "vite": "^4.1.0"
+    "vite": "^7.3.1"
   }
 }
