--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DB_NAME=postgres
 DB_USER=postgres
-DB_PASSWORD=subash2212@
+DB_PASSWORD=your_password_here
 DB_HOST=db.ydvxykcflsykgdcbtlwi.supabase.co
 DB_PORT=5432
