the login working good

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 DB_NAME=postgres
-DB_USER=postgres
+DB_USER=postgres.ydvxykcflsykgdcbtlwi
 DB_PASSWORD=subash2212@
-DB_HOST=db.ydvxykcflsykgdcbtlwi.supabase.co
-DB_PORT=5432
+DB_HOST=aws-1-ap-south-1.pooler.supabase.com
+DB_PORT=6543
+
+DATABASE_URL=postgresql://postgres:subash2212@@db.ydvxykcflsykgdcbtlwi.supabase.co:5432/postgres
