--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Firebase service account
+firebase-service-account.json
+
 # Distribution / packaging
 .Python
 build/
