--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.13.2",
+    "firebase": "^12.8.0",
     "heroicons": "^2.0.16",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
