--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,14 @@
 {
   "name": "civicpulse-frontend",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "axios": "^1.13.2",
     "firebase": "^12.8.0",
     "heroicons": "^2.0.16",
     "lucide-react": "^0.562.0",
+    "framer-motion": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
