--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,16 @@
   "private": true,
   "dependencies": {
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "firebase": "^12.8.0",
-    "heroicons": "^2.0.16",
-    "lucide-react": "^0.562.0",
     "framer-motion": "^10.0.0",
+    "heroicons": "^2.0.16",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^0.0.0",
     "tailwindcss": "^3.2.4"
