--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^10.0.0",
     "heroicons": "^2.0.16",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
