--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
     "framer-motion": "^10.0.0",
     "heroicons": "^2.0.16",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-markercluster": "^4.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^0.0.0",
     "supabase": "^2.76.4",
