the erros were resolved

--- a/.env
+++ b/.env
@@ -12,3 +12,11 @@ VITE_SUPABASE_REDIRECT_URL=http://localhost:3000/dashboard
 
 # Backend API
 VITE_API_BASE_URL=http://127.0.0.1:8000
+
+# Email (SMTP) for complaint status notifications
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=dezacodex@gmail.com
+EMAIL_HOST_PASSWORD=mwcovobwlyoslkqn
+DEFAULT_FROM_EMAIL=dezacodex@gmail.com
